--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
-    "expo": "^51.0.0",
-    "expo-image-picker": "~15.0.5",
+    "expo": "~51.0.16",
+    "expo-image-picker": "~15.0.6",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "^0.74.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-modal-selector": "^2.1.2",
     "react-native-radio-buttons-group": "^3.1.0",
+    "react-native-svg": "^15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0"
   },
